--- a/index.html
+++ b/index.html
@@ -36,94 +36,100 @@
         
         <section class="fonctionnement">
             <h2 class="fonctionnement__title">Fonctionnement</h2>
-            <div class="btn-fonctionnement btn-font btn-rectangle">
-                <div class="btn-ordre btn-rounded">1</div>
-                <i class="fas fa-mobile-alt icon-grey fa-lg"></i>
-                <span>Choisissez un restaurant</span>
-            </div>
-            <div class="btn-fonctionnement btn-font btn-rectangle">
-                <div class="btn-ordre btn-rounded">2</div>
-                <i class="fas fa-list icon-grey fa-lg"></i>
-                <span>Composez votre menu</span>
-            </div>
-            <div class="btn-fonctionnement btn-font btn-rectangle">
-                <div class="btn-ordre btn-rounded">3</div>
-                <i class="fas fa-store icon-purple fa-lg"></i>
-                <span>Dégustez au restaurant</span>
+            <div class="fonctionnement__cards">
+                <div class="btn-fonctionnement btn-font btn-rectangle">
+                    <div class="btn-ordre btn-rounded">1</div>
+                    <i class="fas fa-mobile-alt icon-grey fa-lg"></i>
+                    <span>Choisissez un restaurant</span>
+                </div>
+                <div class="btn-fonctionnement btn-font btn-rectangle">
+                    <div class="btn-ordre btn-rounded">2</div>
+                    <i class="fas fa-list icon-grey fa-lg"></i>
+                    <span>Composez votre menu</span>
+                </div>
+                <div class="btn-fonctionnement btn-font btn-rectangle">
+                    <div class="btn-ordre btn-rounded">3</div>
+                    <i class="fas fa-store icon-purple fa-lg"></i>
+                    <span>Dégustez au restaurant</span>
+                </div>
             </div>
         </section>
         <section class="restaurants" id="restaurants">
-            <h3 class="restaurants__title">Restaurants</h3>
-            <article class="card">
-                <a href="menu-palette-du-gout.html" class="card__link">
-                    <span class="card__new">
-                        <p class="card__position">Nouveau</p>
-                    </span>
-                    <img class="card__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
-                    <div class="card__content">
-                        <span>
-                            <p class="card__title">La palette du goût</p>
-                            <p class="card__subtitle">Ménilmontant</p>
-                        </span>
-                        <label class="heart-container">
-                            <input type="checkbox" class="heart-checkbox">
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </label>
-                    </div>
-                </a>
-            </article>
-            <article class="card">
-                <a href="menu-la-note-enchantée.html" class="card__link">
-                    <span class="card__new">
-                        <p class="card__position">Nouveau</p>
-                    </span>
-                    <img class="card__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
-                    <div class="card__content">
-                        <span>
-                            <p class="card__title">La note enchantée</p>
-                            <p class="card__subtitle">Charonne</p>
-                        </span>
-                        <label class="heart-container">
-                            <input type="checkbox" class="heart-checkbox" />
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </label>
-                    </div>
-                </a>
-            </article>
-            <article class="card">
-                <a href="menu-a-la-francaise.html" class="card__link">
-                    <img class="card__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
-                    <div class="card__content">
-                        <span>
-                            <p class="card__title">À la française</p>
-                            <p class="card__subtitle">Cité Rouge</p>
-                        </span>
-                        <label class="heart-container">
-                            <input type="checkbox" class="heart-checkbox" />
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </label>
-                    </div>
-                </a>
-            </article>
-            <article class="card">
-                <a href="menu-delice-des-sens.html" class="card__link">
-                    <img class="card__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
-                    <div class="card__content">
-                        <span>
-                            <p class="card__title">Le délice des sens</p>
-                            <p class="card__subtitle">Folie-Méricourt</p>
-                        </span>
-                        <label class="heart-container">
-                            <input type="checkbox" class="heart-checkbox" />
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </label>
-                    </div>
-                </a>
-            </article>
+            <div class="restaurants__container">
+                <h3 class="restaurants__title">Restaurants</h3>
+                    <div class="restaurants__grid">
+                    <article class="card">
+                        <a href="menu-palette-du-gout.html" class="card__link">
+                            <span class="card__new">
+                                <p class="card__position">Nouveau</p>
+                            </span>
+                            <img class="card__img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                            <div class="card__content">
+                                <span>
+                                    <p class="card__title">La palette du goût</p>
+                                    <p class="card__subtitle">Ménilmontant</p>
+                                </span>
+                                <label class="heart-container">
+                                    <input type="checkbox" class="heart-checkbox">
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart"></i>
+                                </label>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="card">
+                        <a href="menu-la-note-enchantée.html" class="card__link">
+                            <span class="card__new">
+                                <p class="card__position">Nouveau</p>
+                            </span>
+                            <img class="card__img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                            <div class="card__content">
+                                <span>
+                                    <p class="card__title">La note enchantée</p>
+                                    <p class="card__subtitle">Charonne</p>
+                                </span>
+                                <label class="heart-container">
+                                    <input type="checkbox" class="heart-checkbox" />
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart"></i>
+                                </label>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="card">
+                        <a href="menu-a-la-francaise.html" class="card__link">
+                            <img class="card__img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                            <div class="card__content">
+                                <span>
+                                    <p class="card__title">À la française</p>
+                                    <p class="card__subtitle">Cité Rouge</p>
+                                </span>
+                                <label class="heart-container">
+                                    <input type="checkbox" class="heart-checkbox" />
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart"></i>
+                                </label>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="card">
+                        <a href="menu-delice-des-sens.html" class="card__link">
+                            <img class="card__img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette d'un restaurant">
+                            <div class="card__content">
+                                <span>
+                                    <p class="card__title">Le délice des sens</p>
+                                    <p class="card__subtitle">Folie-Méricourt</p>
+                                </span>
+                                <label class="heart-container">
+                                    <input type="checkbox" class="heart-checkbox" />
+                                    <i class="far fa-heart"></i>
+                                    <i class="fas fa-heart"></i>
+                                </label>
+                            </div>
+                        </a>
+                    </article>
+                </div>
+            </div>
         </section>
     </main>
 
